--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
   <link rel="icon" type="image/ico" href="favicon.ico" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
 </head>
 
 <body>
@@ -32,5 +34,6 @@
     /* Hide vertical scrollbar */
     overflow-x: hidden;
     /* Hide horizontal scrollbar */
+
   }
 </style>
